# Numerical-Integrator

./: CMakeLists.txt  README.md  expression_parser.c  expression_parser.h  gui.c  gui.h  integral.c  integral.h  main.c  numerical_integral.c  styles.css
src/controls/: README.md  controls.c  controls.h
src/integrator/: README.md  integral.c  integral.h
src/memcheck/: debugmalloc.h
src/parser/: README.md  expression_parser.c  expression_parser.h
src/program/: main.c
src/ui/: README.md  gui.c  gui.h  styles.css
